# http-client-c

./: .gitignore  CMakeLists.txt  README.md
src/: base64.h  error.h  http-client-c.h  http-client-header.h  http-client-struct.h  stringx.h  urlparser.h
src/charset/: utf8.h
src/encoding/: chunked.h  decode.h  struct.h
src/http/: client.h  header.h  struct.h
src/url/: parser.h
test/: main.c
